--- a/styles.css
+++ b/styles.css
@@ -13,4 +13,34 @@
 
 .error {
   color: crimson;
+}
+
+.capital {
+  text-transform: capitalize;
+}
+
+.city__heading {
+  letter-spacing: 3px;
+}
+
+@-webkit-keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.appear {
+  -webkit-animation: appear 0.7s ease-in;
+          animation: appear 0.7s ease-in;
 }/*# sourceMappingURL=styles.css.map */
