--- a/styles.scss
+++ b/styles.scss
@@ -14,3 +14,24 @@
 .error {
   color: crimson;
 }
+
+.capital {
+  text-transform: capitalize;
+}
+
+.city__heading {
+  letter-spacing: 3px;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.appear {
+  animation: appear 0.7s ease-in;
+}
