--- a/scss/main.css
+++ b/scss/main.css
@@ -102,6 +102,12 @@
   align-items: center;
   justify-content: center;
 }
+@media screen and (max-width: 768px) {
+  .hero__container {
+    height: 50%;
+    width: 50%;
+  }
+}
 
 a {
   color: inherit;
@@ -125,6 +131,12 @@ a:hover {
   transition: all 200ms ease-in;
   cursor: pointer;
 }
+@media screen and (max-width: 768px) {
+  .btn {
+    display: flex;
+    margin-bottom: 1rem;
+  }
+}
 .btn--primary {
   background: #7f8ff4;
   color: #fff;
@@ -142,6 +154,11 @@ a:hover {
 .btn--inside {
   margin-left: -96px;
 }
+@media screen and (max-width: 768px) {
+  .btn--inside {
+    margin-left: 0px;
+  }
+}
 
 .form__field {
   width: 360px;
@@ -152,6 +169,12 @@ a:hover {
   border: 0;
   outline: 0;
   padding: 22px 18px;
+}
+@media screen and (max-width: 768px) {
+  .form__field {
+    padding: 1rem;
+    width: 50vh;
+  }
 }
 
 .card {
@@ -165,6 +188,12 @@ a:hover {
   align-items: center;
   background-color: #f5f5f5;
   color: black;
+}
+@media screen and (max-width: 768px) {
+  .card {
+    width: 40vh;
+    margin: 0px;
+  }
 }
 .card__container {
   text-align: center;
