--- a/scss/main.scss
+++ b/scss/main.scss
@@ -110,6 +110,12 @@ $input-text-color: #a3a3a3;
 $button-bg-color: #7f8ff4;
 $button-text-color: #fff;
 
+@mixin mobile {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
 //** root
 :root {
   background: $background;
@@ -124,6 +130,10 @@ $button-text-color: #fff;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  @include mobile {
+    height: 50%;
+    width: 50%;
+  }
 }
 
 a {
@@ -149,14 +159,16 @@ a {
   padding: 0;
   transition: all 200ms ease-in;
   cursor: pointer;
-
+  @include mobile {
+    display: flex;
+    margin-bottom: 1rem;
+  }
   &--primary {
     background: $button-bg-color;
     color: $button-text-color;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
     padding: 12px 36px;
-
     &:hover {
       background: darken($button-bg-color, 4%);
     }
@@ -169,6 +181,9 @@ a {
 
   &--inside {
     margin-left: -96px;
+    @include mobile {
+      margin-left: 0px;
+    }
   }
 }
 
@@ -183,6 +198,10 @@ a {
     border: 0;
     outline: 0;
     padding: 22px 18px;
+    @include mobile {
+      padding: 1rem;
+      width: 50vh;
+    }
   }
 }
 
@@ -201,6 +220,11 @@ a {
   align-items: center;
   background-color: #f5f5f5;
   color: black;
+  @include mobile {
+    width: 40vh;
+    margin: 0px;
+    // padding: auto 20rem;
+  }
 
   &__container {
     text-align: center;
